--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ boto3==1.37.22
 botocore==1.37.22
 canonicaljson==2.0.0
 certifi==2025.1.31
+setuptools
 charset-normalizer==3.4.1
 ckzg==2.1.0
 click==8.1.8
