--- a/project-repo/dagster_cloud.yaml
+++ b/project-repo/dagster_cloud.yaml
@@ -1,5 +1,2 @@
-# dagster_cloud.yaml
 locations:
-  - location_name: census-data
-    code_source:
-      package_name: pipelines
+  - python_file: pipelines/orchestration/dagster_defs.py
