--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,7 @@ on:
     branches:
       - "main"
       - "master"
-
 concurrency:
-  # Cancel in-progress deploys to same branch
   group: ${{ github.ref }}/deploy
   cancel-in-progress: true
 env:
@@ -14,66 +12,29 @@ env:
   DAGSTER_CLOUD_API_TOKEN: ${{ secrets.DAGSTER_CLOUD_API_TOKEN }}
   ENABLE_FAST_DEPLOYS: 'true'
   PYTHON_VERSION: '3.10'
-  DAGSTER_CLOUD_FILE: 'dagster_cloud.yaml'
-
 jobs:
-  dagster_cloud_default_deploy:
-    name: Dagster Serverless Deploy
+  deploy:
+    name: Deploy to Dagster Cloud
     runs-on: ubuntu-22.04
-    outputs:
-      build_info: ${{ steps.parse-workspace.outputs.build_info }}
-
     steps:
-      - name: Prerun Checks
-        id: prerun
-        uses: dagster-io/dagster-cloud-action/actions/utils/prerun@v0.1
-
-      - name: Launch Docker Deploy
-        if: steps.prerun.outputs.result == 'docker-deploy'
-        id: parse-workspace
-        uses: dagster-io/dagster-cloud-action/actions/utils/parse_workspace@v0.1
-        with:
-          dagster_cloud_file: $DAGSTER_CLOUD_FILE
-
-      - name: Checkout for Python Executable Deploy
-        if: steps.prerun.outputs.result == 'pex-deploy'
+      - name: Checkout repository
         uses: actions/checkout@v3
+      
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          ref: ${{ github.head_ref }}
-          path: project-repo
-
-      - name: Python Executable Deploy
-        if: steps.prerun.outputs.result == 'pex-deploy'
-        uses: dagster-io/dagster-cloud-action/actions/build_deploy_python_executable@v0.1
-        with:
-          dagster_cloud_file: "$GITHUB_WORKSPACE/project-repo/$DAGSTER_CLOUD_FILE"
-          build_output_dir: "$GITHUB_WORKSPACE/build"
-          python_version: "${{ env.PYTHON_VERSION }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  dagster_cloud_docker_deploy:
-    name: Docker Deploy
-    runs-on: ubuntu-20.04
-    if: needs.dagster_cloud_default_deploy.outputs.build_info
-    needs: dagster_cloud_default_deploy
-    strategy:
-      fail-fast: false
-      matrix:
-        location: ${{ fromJSON(needs.dagster_cloud_default_deploy.outputs.build_info) }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Build and deploy to Dagster Cloud serverless
-        uses: dagster-io/dagster-cloud-action/actions/serverless_prod_deploy@v0.1
-        with:
-          dagster_cloud_api_token: ${{ secrets.DAGSTER_CLOUD_API_TOKEN }}
-          location: ${{ toJson(matrix.location) }}
-          base_image: "python:${{ env.PYTHON_VERSION }}-slim"
-          # Uncomment to pass through Github Action secrets as a JSON string of key-value pairs
-          # env_vars: ${{ toJson(secrets) }}
-          organization_id: ${{ secrets.ORGANIZATION_ID }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          python-version: '3.10'
+      
+      - name: Install Dagster Cloud CLI
+        run: pip install dagster-cloud
+      
+      - name: Deploy to Dagster Cloud Serverless
+        run: |
+          echo "Deploying to Dagster Cloud Serverless"
+          dagster-cloud serverless deploy-python-executable ./project-repo \
+            --module-name=pipelines.orchestration.dagster_defs \
+            --location-name=census-data \
+            --api-token=${{ secrets.DAGSTER_CLOUD_API_TOKEN }} \
+            --organization=${{ secrets.ORGANIZATION_ID }} \
+            --deployment=prod \
+            --python-version=${{ env.PYTHON_VERSION }}
