--- a/project-repo/requirements.txt
+++ b/project-repo/requirements.txt
@@ -1,14 +1,20 @@
+aiobotocore==2.21.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aioitertools==0.12.0
+aiosignal==1.3.2
 alembic==1.15.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.13.2
 anyio==4.9.0
+async-timeout==5.0.1
+attrs==25.3.0
 backoff==2.2.1
 bitarray==3.2.0
 boto3==1.37.22
-botocore==1.37.22
+botocore==1.37.1
 canonicaljson==2.0.0
 certifi==2025.1.31
-setuptools
 charset-normalizer==3.4.1
 ckzg==2.1.0
 click==8.1.8
@@ -31,6 +37,7 @@ eth_abi==5.2.0
 exceptiongroup==1.2.2
 farcaster==0.7.12
 filelock==3.18.0
+frozenlist==1.5.0
 fsspec==2025.3.0
 gql==3.5.2
 graphene==3.4.3
@@ -50,6 +57,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.2.0
+neo4j==5.28.1
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
@@ -70,6 +78,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
 rlp==4.1.0
+s3fs==2025.3.0
 s3transfer==0.11.4
 six==1.17.0
 sniffio==1.3.1
@@ -91,4 +100,5 @@ uvloop==0.21.0
 watchdog==5.0.3
 watchfiles==1.0.4
 websockets==15.0.1
+wrapt==1.17.2
 yarl==1.18.3
